--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,13 @@
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
-            <version>5.2.2</version>
+            <version>5.3.1</version>
+        </dependency>
+        <!--We need this to use use Selenide-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
         </dependency>
     </dependencies>
 
