--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,11 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
-        <junit-jupiter-engine.version>5.1.0</junit-jupiter-engine.version>
+        <!--Any version available-->
+        <junit-jupiter-engine.version>5.6.0-M1</junit-jupiter-engine.version>
         <junit-platform-surefire-provider.version>1.2.0</junit-platform-surefire-provider.version>
         <aspectj.version>1.8.10</aspectj.version>
-        <allure-junit5.version>2.6.0</allure-junit5.version>
+        <allure-junit5.version>2.13.0</allure-junit5.version>
     </properties>
 
     <dependencies>
@@ -41,13 +42,19 @@
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
-            <version>5.3.1</version>
+            <version>5.2.3</version>
         </dependency>
         <!--We need this to use use Selenide-->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>23.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>2.13.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
