--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,3 +4,5 @@ selenide.headless=false
 selenide.browserSize=1920x1080
 selenide.screenshots=true
 selenide.savePageSource=false
+selenide.enableVNC=true
+selenide.remoteUrl=http://localhost:4444/wd/hub
